Update and rename 1) Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li><a href="https://open.spotify.com/">Listening Music</a></li>
         </ol>
 
-        <h3><a href="2) Contacts.html">Contact Me</a></h3>
+        <h3><a href="contacts.html">Contact Me</a></h3>
 
     </body>
 </html>
